@@ -1,4 +1,4 @@
-This is PHP Network Weathermap, version 0.94 by Howard Jones (howie@thingy.com)
+This is PHP Network Weathermap, version 0.941 by Howard Jones (howie@thingy.com)
 
 See the docs sub directory for full HTML documentation, FAQ and example config.
 
